commit 6 GPSActivity Map works

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
         android:usesPermissionFlags="neverForLocation" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
-
     <uses-feature
         android:name="android.hardware.bluetooth"
         android:required="true" />
@@ -28,8 +27,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CoolerControl">
+        <activity
+            android:name=".MapsActivity"
+            android:exported="false" />
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyA-KzBC6tX3H8HiC7UnNfWtUYvTN6lzzIM"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA-KzBC6tX3H8HiC7UnNfWtUYvTN6lzzIM" />
 
         <activity
             android:name=".MainActivity"
