--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,14 @@ android {
     }
 
     buildTypes {
+        debug{
+            debuggable true
+        }
+        customDebuggableBuildType{
+            debuggable true
+        }
         release {
+            debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
