--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".MyAmplifyApp"
         android:icon="@mipmap/ic_cooler_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
