--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'pub.devrel:easypermissions:3.0.0'
-    implementation 'com.amplifyframework:aws-api:1.37.5'
-    implementation 'com.amplifyframework:aws-datastore:1.37.5'
+    implementation 'com.amplifyframework:core:1.37.6'
+    implementation 'com.amplifyframework:aws-api:1.37.6'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
